Event and Tier Services fixed